--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,8 +9,7 @@
   font-weight: normal;
 } */
 
-a,
-.green {
+/* .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
@@ -21,7 +20,7 @@ a,
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
-}
+} */
 
 /* @media (min-width: 1024px) {
   body {
